08/labs/ingress/ingress.yml
# ingress : 규칙 (네임스페이스마다 설정해줘야 함)
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepay-ingress
  namespace: testns
#  namespace: default
#  annotations:
#    ingressclass.kubernetes.io/is-default-class: "true"
# 자신의 상태를 trigger 해서 상태가 변하면 알려줄 수 있음

spec:
  ingressClassName: nginx     	# anonotations 관련 정보가 deprecated 되어서 대신 설정한다.
                                # kubectl get ingressclass -> nginx
                                # └ 어떤 Ingress 컨트롤러 사용중인가?, 반드시 작성해야 됨
  rules:  
  - http:  
      paths:  # 경로 여러개 지정 가능, 보통 복수형 단어면 밑에 리스트형식(-)의 값을 가짐
      - path: /                 
        pathType: Prefix        # / 접두사로 요청이 들어오면
        backend:                # 여기로 보내겠다
          service:
            name: home-svc    # 해당 서비스 이름의 80포트로
            port:
              number: 80

      - path: /pay              # www.example.com(서비스 도메인)/pay로 들어오면 (prefix)
        pathType: Prefix
        backend:                # 여기로 보내겠다 (backend)
          service: 
            name: pay-svc
            port:
              number: 80
